--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.14",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
