--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -116,3 +116,19 @@ Resources:
           Properties:
             Path: /v1/items/{id}/restore
             Method: POST
+  ToDeleteGroceryV1:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Metadata:
+      BuildMethod: go1.x
+    Properties:
+      CodeUri: functions/DeleteGroceryV1
+      Handler: bootstrap
+      Runtime: provided.al2023
+      Architectures:
+        - x86_64
+      Events:
+        CatchAll:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /v1/items/{id}/delete
+            Method: DELETE
