--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "sonner": "^1.7.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
