--- a/backend/Makefile
+++ b/backend/Makefile
@@ -4,4 +4,4 @@ build:
 
 .PHONY: dev
 dev: build
-	sam local start-api --port 3333 --env-vars env.json
+	sam local start-api --host 0.0.0.0 --port 3333 --env-vars env.json
